<resources>
    <string name="app_name">MangoApp</string>
    <string name="phone_number">Номер телефона</string>
    <string name="get_auth_code">Получить код</string>
    <string name="invalid_sms_code">Код подтверждения должен состоять из 6 цифр</string>
    <string name="sms_code">Код из смс</string>
    <string name="sign_in">Войти</string>
    <string name="name">Имя</string>
    <string name="username">Никнейм</string>
    <string name="error_empty_field">Заполните поле</string>
    <string name="register">Зарегистрироваться</string>
    <string name="birthday">Дата рождения</string>
    <string name="city">Город</string>
    <string name="vk">Vk</string>
    <string name="instagram">Instagram (Запрещённая организация на территории РФ)</string>
    <string name="status">Статус</string>
    <string name="save">Сохранить</string>
    <string name="saved_successfully">Успешно сохранено</string>
    <string name="name_">Имя: %s</string>
    <string name="username_">Никнейм: %s</string>
    <string name="birthday_">Дата рождения: %s</string>
    <string name="city_">Город: %s</string>
    <string name="vk_">Vk: %s</string>
    <string name="instagram_">Instagram (Запрещённая организация на территории РФ): %s</string>
    <string name="status_">Статус: %s</string>
    <string name="edit">Редактировать</string>
</resources>